--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 
-{% load staticfiles %} <!-- New line -->
+{% load staticfiles %}
 
 <html>
     <head>
         <title>Rango</title>
     </head>
-    
+
     <body>
         <h1>Rango says...</h1>
-        
+
         <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
+            hey there partner!
         </div>
-        
+
         <div>
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                    <li>
+                        <a href='/rango/category/{{category.slug}}'>{{ category.name }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+                <strong>There are no categories present.</strong>
+        {% endif %}
+        </div>
             <a href="/rango/about/">About</a><br />
-            <img src="{% static "images/rango.jpg" %}"
-                 alt="Picture of Rango" /> <!-- New line -->
+            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
         </div>
     </body>
-    
 </html>
