Updating to pass some automated tests

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,6 +15,6 @@
         </div>
 
         <img src="{% static 'images/question_mark.png' %}" width='300px' alt='question mark'>
-        <img width='300px' src="{{ MEDIA_URL }}cat.jpg" alt="cat">
+        <img src="{{ MEDIA_URL }}cat.jpg" width='300px' alt="cat">
     </body>
 </html>
