--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,20 +1,16 @@
-<!doctype html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-    <head>
-        <title>About</title>
-    </head>
-    <body>
-        <h1>About Rango</h1>
-        <div>
-            <p>Rango says here is the about page.</p>
-            <p>This tutorial has been put together by {{ author }}</p>
-            <a href='/rango/'>Home</a>
-        </div>
+{% block title_block %}
+    About
+{% endblock %}
 
-        <img src="{% static 'images/question_mark.png' %}" width='300px' alt='question mark'>
-        <img src="{{ MEDIA_URL }}cat.jpg" width='300px' alt="cat">
-    </body>
-</html>
+{% block body_block %}
+<h1>About Rango</h1>
+<div>
+    <p>Rango says here is the about page.</p>
+    <p>This tutorial has been put together by {{ author }}</p>
+    <img src="{% static 'images/question_mark.png' %}" width='300px' alt='question mark'>
+    <img src="{{ MEDIA_URL }}cat.jpg" width='300px' alt="cat">
+</div>
+{% endblock %}
