--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,33 +1,29 @@
-<!doctype html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+    Add page
+{% endblock %}
 
-    <body>
-        <h1>Add a Page</h1>
-        <div>
-            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-
-                {% if category %}
-                    {% csrf_token %}
-                    {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                    {% endfor %}
-                    {% for field in form.visible_fields %}
-                        {{ field.errors }}
-                        {{ field.help_text }}
-                        {{ field }}
-                        <br />
-                    {% endfor %}
-                    <input type="submit" name="submit" value="Create Page"/>
-                {% else %}
-                    A category by this name does not exist
-                {% endif %}
-
-
-            </form>
-        </div>
-    </body>
-</html>
+{% block body_block %}
+    <h1>Add a Page</h1>
+    <div>
+        <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+            {% if category %}
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
+                {% for field in form.visible_fields %}
+                    {{ field.errors }}
+                    {{ field.help_text }}
+                    {{ field }}
+                    <br />
+                {% endfor %}
+                <input type="submit" name="submit" value="Create Page"/>
+            {% else %}
+                A category by this name does not exist
+            {% endif %}
+        </form>
+    </div>
+{% endblock %}
