--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,29 +1,24 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-    <body>
-        <div>
-            {% if category %}
-                <h1>{{category.name}}</h1>
-                {% if pages %}
-                    <ul>
-                    {% for page in pages %}
-                        <li><a href="{{page.url}}">{{page.title}}</a></li>
-                    {% endfor %}
-                    </ul>
-                {% else %}
-                    <strong>No pages currently in category.</strong>
-                {% endif %}
-                <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
-            {% else %}
-                The specified category does not exist!
-            {% endif %}
-        </div>
-        <div>
-            <a href='/rango'>Home</a>
-        </div>
-    </body>
-</html>
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{category.name}}</h1>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{page.url}}">{{page.title}}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+        <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
