--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load staticfiles %}
+{% load rango_template_tags %}
 
 <html>
     <head lang='en'>
@@ -13,6 +14,11 @@
     </head>
 
     <body>
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>
         <div>
             {% block body_block %}
             {% endblock %}
