Completing ch9 exercises

--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -7,6 +7,9 @@
 
 {% block body_block %}
 <h1>Login to Rango</h1>
+    {% if errormsg %}
+        <p style='color:red;'>{{ errormsg }}</p>
+    {% endif %}
 <form id="login_form" method="post" action="{% url 'login' %}">
     {% csrf_token %}
     Username : <input type="text" name="username" value="" size="50" /><br />
