--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@
 <div>
     <p>Rango says here is the about page.</p>
     <p>This tutorial has been put together by {{ author }}</p>
+    <p>You have visited the site {{ visits }} times!</p>
     <img src="{% static 'images/question_mark.png' %}" width='300px' alt='question mark'>
     <img src="{{ MEDIA_URL }}cat.jpg" width='300px' alt="cat">
 </div>
