Adding views to index and about page

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,7 +11,6 @@
             hey there partner!
         {% endif %}
     </div>
-
     <div>
         <h2>Most Liked Categories</h2>
     {% if categories %}
@@ -40,6 +39,7 @@
             <strong>There are no pages present.</strong>
         {% endif %}
     </div>
+    <div>Visits: {{ visits }}</div>
     <div>
         <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
     </div>
